--- a/frontend_stuff/package.json
+++ b/frontend_stuff/package.json
@@ -29,8 +29,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix"
+    "lint": "eslint ./src/**/*.{ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
+    "set:bash": "npm config set script-shell D:/PFiles/Git/bin/bash.exe"
   },
   "browserslist": {
     "production": [
