--- a/backend_stuff/.eslintrc
+++ b/backend_stuff/.eslintrc
@@ -11,7 +11,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./backend_stuff/tsconfig.json",
+    "project": "./tsconfig.json",
     "ecmaVersion": 11,
     "sourceType": "module"
   },
@@ -29,8 +29,22 @@
       "warn",
       { "argsIgnorePattern": "^_" }
     ],
+    "@typescript-eslint/member-delimiter-style": [
+      "warn",
+      {
+        "multiline": {
+          "delimiter": "none",
+          "requireLast": true
+        },
+        "singleline": {
+          "delimiter": "comma",
+          "requireLast": false
+        },
+        "multilineDetection": "brackets"
+      }
+    ],
     "no-case-declarations": "off",
-    "indent": ["warn", 2],
+    "indent": ["warn", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["warn", "windows"],
     "quotes": ["warn", "single"],
     "eqeqeq": "warn",
